style.css
/* CSS HEX */
* {
  --baby-powder: #fffffaff;
  --baby-powder-hover: aquamarine;
  --midnight-green-eagle-green: #0d5c63ff;
  --cadet-blue: #44a1a0ff;
  --middle-blue: #78cdd7ff;
  --teal: #247b7bff;
  --tale-dark: #212121;
  }

@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
body {
  font: 100% Roboto, sans-serif;
  
  background-color: var(--tale-dark);
  background-size: cover;
  color: var(--baby-powder);
  margin: 0;
}

.button{

  background-color: var(--midnight-green-eagle-green); /* Green */
  border-radius: 1vw;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 2vw;
  transition: 0.5s;

}

.button:hover{

  transform: scale(1.05);
  transition: 0.5s;

  box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.75);
  -webkit-box-shadow: 0px 0px 7px 4px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.75);

}

.nav-wrapper{
  text-align: center;
}

.nav-item{
  margin-top: 1vh;
  margin-bottom: 1vh;
  display: inline-block;
  border-right: 1px #224422 dotted;
  padding-right: 3.5vw;
  padding-left: 3.5vw;
  font-size: 2.5vh;
  transition: 0.5s;
}

.fa-angrycreative{
  transform: scale(2);
}


.nav-item a:hover{

  color: var(--baby-powder-hover);
  transition: 1.5s;
}


.stop-border{
  border: none;
}


header{
  background: url(https://images.wallpaperscraft.com/image/laptop_keyboard_glow_170138_3840x2160.jpg) no-repeat 50% 50%;
  width: 100%;
  height: 100vh;
  background-color: var(--tale-dark);
  text-align: center;
  
}

.header-intro{

  padding-top: 14vh;
  font-size: 6vh;

}

.header-main{

  font-size: 16vh;
  padding:3vw;

}

.jobs-res{
  padding:5vh;
  height: fit-content;
}

.split {
  height: 100vh;
  width: 50%;
  position: absolute;
  z-index: 1;
  overflow-x: hidden;
}

.left {
  left: 0;
  background: url(https://images.wallpaperscraft.com/image/hand_mouse_keyboard_143632_1920x1080.jpg) no-repeat;
}

.right {
  right: 0;
  background: url(https://images.wallpaperscraft.com/image/books_library_reading_211249_1920x1080.jpg) no-repeat;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.centered i {
  font-size: 20vh;
}

.banner{
  margin-top: 97vh;
  margin-bottom: 2vh;
  width: 100%;
  height: 30vh;
  background: url(https://images.wallpaperscraft.com/image/city_buildings_road_212292_3840x2160.jpg) no-repeat 50% 50%;
  text-align: center;
}

.platform{
  text-align: center;
  margin-bottom: 10vh;
}

.platform-title{
  font-size: 3vw;
  width: 100vw;
  
}

.platform-item{

  display: inline-block;
  width: 20vw;
  font-size: 3vw;
  height: fit-content;
}

.platform-item:hover{
  color: aquamarine;
  transition: 1s;
}
.platform-item img:hover{
  transform: scale(1.05);
  
  transition: 0.5s;
}

.platform img {
  width: 12vw;
  border-radius: 50%;
  transition: 0.5s;
}

footer{
  width: 100vw;
  height: 5vh;
  font-size: 2vh;
  text-align: center;
}

